--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,9 @@ googleAnalytics = ""
   # Copyright
   copyright = "&copy; 2018 Amy Orben"
 
+  # Favicon
+  favicon = "favicon.ico"
+
   # Section - Content
   [params.content]
     name = "Psychologist | College Lecturer | DPhil Candidate"
